kube/http.yml
---
apiVersion: v1
kind: Service
metadata:
  name: orthocal-http
  namespace: orthocal
  labels:
    app: orthocal
    service: http
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: orthocal
    service: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http
  namespace: orthocal
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: orthocal
        service: http
    spec:
      containers:
      - name: orthocal
        imagePullPolicy: Always
        image: brianglass/orthocal-service:latest
        resources:
          requests:
            cpu: 256m
            memory: 32Mi
          limits:
            cpu: 940m
            memory: 128Mi
        ports:
        - name: http
          containerPort: 8080
